# VM-System

./: .editorconfig  .gitignore  README.md  data_dump.json  dev-docker-compose.yml  manage.py  requirements.txt  setup.cfg
docs/: structure_projects.txt  useful_commands.txt
docs/lib/: help.txt
static/css/: custom.css
templates/: base.html  create_item-component.html  login.html  nav.html  pagination.html  side-nav.html
templates/budgets/: budget_delete_confirm_delete.html  budget_update_form.html  create.html  index.html
templates/companies/: companies_delete_confirm_delete.html  create.html  edit.html  index.html
templates/customers/: create_business.html  create_customer.html  customer_confirm_delete.html  detail.html  index.html  update_business.html
templates/employees/: create_employee.html  detail.html  employee_confirm_delete.html  index.html
templates/providers/: index.html
templates/repairs/: budget_update_form.html  create.html  index.html  repair_update_form.html
templates/session/: login.html  profile.html
templates/vehicles/: create_vehicle.html  detail.html  index.html  vehicle_delete_confirm_delete.html
vmSystem/: asgi.py  settings.py  urls.py  wsgi.py
vmSystem/apps/admin_website/: admin.py  apps.py  urls.py
vmSystem/apps/bank_accounts/: admin.py  models.py
vmSystem/apps/companies/: admin.py  models.py  urls.py  views.py
vmSystem/apps/employees/: models.py  urls.py  views.py
vmSystem/apps/entities/: admin.py
vmSystem/apps/login/: urls.py  views.py
vmSystem/apps/persons/: models.py
vmSystem/apps/providers/: admin.py  (+3 more)
(+37 files in other folders)
