[metadata]
name = VM-System
authors_email = menendez.gabriel@gmail.com, lozanotux@gmail.com
description = A managment system for garages

# Flake8 Configuration
[flake8]
import-order-style = google
application-import-names = flake8
#Black formatter default
max-line-length = 88

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = django
line_length = 79
multi_line_output = 5
